# CameraApp

./: .gitignore  CMakeLists.txt  README.md
main/: MainWindow.cpp  MainWindow.h  MainWindow.ui
